# zivv-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  debug_db.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_gmgn_web.py  test_llm.py
.github/workflows/: docker-build.yml
app/agent/: graph.py  nodes.py  state.py
app/core/: config.py  db.py
app/services/: alpha_detective.py  persistence.py  scheduler.py
